data/issues_nolabel/nolabel_test_2811.txt
ERROR when building pip package: undeclared function related to swig

I was able to build the cc:tutorials_example_trainer , but failed to build the  pip package. Could anyone suggest how I can fix it? Thanks a lot!
Environment info
Operating System:
CentOS 6.5
Installed version of CUDA and cuDNN:
(please attach the output of ls -l /path/to/cuda/lib/libcud*):
cuda-7.5
Steps to reproduce

I used python 3.5.1  installled by pyenv
I installed swig from source

Error Log
ERROR: /csproject/dygroup2/czeng/downloads/tensorflow/tensorflow/python/BUILD:978:1: C++ compilation of rule '//tensorflow/python:pywrap_tensorflow.so' failed: crosstool_wrapper_driver_is_not_gcc failed: error executing command
(cd /csproject/dygroup2/czeng/.cache/bazel/bazel_czeng/211970d9a1065a07eafbeb7dcc542b10/execroot/tensorflow && 
exec env - 
PATH=/project/dygroup2/czeng//.pyenv/shims:/project/dygroup2/czeng//.pyenv/bin:/project/dygroup2/czeng/venv/bin:/usr/lib64/qt-3.3/bin:/usr/local/bin:/bin:/usr/bin:/usr/local/cuda-7.5/bin:/usr/local/cuda-7.5/nvvm/bin:/csproject/dygroup2/czeng/venv/cudnnv5 
TMPDIR=/tmp/2110270.1.all.q 
third_party/gpus/crosstool/clang/bin/crosstool_wrapper_driver_is_not_gcc -U_FORTIFY_SOURCE '-D_FORTIFY_SOURCE=1' -fstack-protector -fPIE -Wall -Wunused-but-set-parameter -Wno-free-nonheap-object -fno-omit-frame-pointer -g0 -O2 -DNDEBUG -ffunction-sections -fdata-sections -g0 '-std=c++11' -MD -MF bazel-out/host/bin/tensorflow/python/objs/pywrap_tensorflow.so/tensorflow/python/pywrap_tensorflow.pic.d '-frandom-seed=bazel-out/host/bin/tensorflow/python/objs/pywrap_tensorflow.so/tensorflow/python/pywrap_tensorflow.pic.o' -fPIC -DGPR_BACKWARDS_COMPATIBILITY_MODE -iquote . -iquote bazel-out/host/genfiles -iquote external/protobuf -iquote bazel-out/host/genfiles/external/protobuf -iquote external/bazel_tools -iquote bazel-out/host/genfiles/external/bazel_tools -iquote external/farmhash_archive -iquote bazel-out/host/genfiles/external/farmhash_archive -iquote external/jpeg_archive -iquote bazel-out/host/genfiles/external/jpeg_archive -iquote external/png_archive -iquote bazel-out/host/genfiles/external/png_archive -iquote external/highwayhash -iquote bazel-out/host/genfiles/external/highwayhash -iquote external/re2 -iquote bazel-out/host/genfiles/external/re2 -iquote external/eigen_archive -iquote bazel-out/host/genfiles/external/eigen_archive -iquote external/grpc -iquote bazel-out/host/genfiles/external/grpc -iquote external/nanopb_git -iquote bazel-out/host/genfiles/external/nanopb_git -isystem external/protobuf/src -isystem bazel-out/host/genfiles/external/protobuf/src -isystem external/bazel_tools/tools/cpp/gcc3 -isystem external/farmhash_archive/farmhash-34c13ddfab0e35422f4c3979f360635a8c050260 -isystem bazel-out/host/genfiles/external/farmhash_archive/farmhash-34c13ddfab0e35422f4c3979f360635a8c050260 -isystem external/jpeg_archive/jpeg-9a -isystem bazel-out/host/genfiles/external/jpeg_archive/jpeg-9a -isystem external/png_archive/libpng-1.2.53 -isystem bazel-out/host/genfiles/external/png_archive/libpng-1.2.53 -isystem external/highwayhash -isystem bazel-out/host/genfiles/external/highwayhash -isystem external/re2 -isystem bazel-out/host/genfiles/external/re2 -isystem third_party/eigen3 -isystem bazel-out/host/genfiles/third_party/eigen3 -isystem external/eigen_archive/eigen-eigen-5f86b31739cd -isystem bazel-out/host/genfiles/external/eigen_archive/eigen-eigen-5f86b31739cd -isystem third_party/gpus/cuda/include -isystem bazel-out/host/genfiles/third_party/gpus/cuda/include -isystem third_party/py/numpy/numpy_include -isystem bazel-out/host/genfiles/third_party/py/numpy/numpy_include -isystem util/python/python_include -isystem bazel-out/host/genfiles/util/python/python_include -isystem third_party/gpus/cuda -isystem bazel-out/host/genfiles/third_party/gpus/cuda -isystem third_party/gpus/cuda/extras/CUPTI/include -isystem bazel-out/host/genfiles/third_party/gpus/cuda/extras/CUPTI/include -isystem external/grpc/include -isystem bazel-out/host/genfiles/external/grpc/include -isystem external/grpc -isystem bazel-out/host/genfiles/external/grpc -Wno-self-assign -Wno-write-strings -no-canonical-prefixes -Wno-builtin-macro-redefined '-D__DATE="redacted"' '-D__TIMESTAMP="redacted"' '-D__TIME="redacted"' -fno-canonical-system-headers -c bazel-out/host/bin/tensorflow/python/pywrap_tensorflow.cc -o bazel-out/host/bin/tensorflow/python/objs/pywrap_tensorflow.so/tensorflow/python/pywrap_tensorflow.pic.o): com.google.devtools.build.lib.shell.BadExitStatusException: Process exited with status 1.
bazel-out/host/bin/tensorflow/python/pywrap_tensorflow.cc: In function 'swig_module_info* SWIG_Python_GetModule()':
bazel-out/host/bin/tensorflow/python/pywrap_tensorflow.cc:2452:51: error: 'PyCObject_Import' was not declared in this scope
(char)"type_pointer" SWIG_TYPE_TABLE_NAME);
^
bazel-out/host/bin/tensorflow/python/pywrap_tensorflow.cc: In function 'void SWIG_Python_SetModule(swig_module_info)':
bazel-out/host/bin/tensorflow/python/pywrap_tensorflow.cc:2521:92: error: 'PyCObject_FromVoidPtr' was not declared in this scope
PyObject pointer = PyCObject_FromVoidPtr((void *) swig_module, SWIG_Python_DestroyModule);
^
bazel-out/host/bin/tensorflow/python/pywrap_tensorflow.cc:2512:22: warning: unused variable 'swig_empty_runtime_method_table' [-Wunused-variable]
static PyMethodDef swig_empty_runtime_method_table[] = { {NULL, NULL, 0, NULL} };/ Sentinel /
^
bazel-out/host/bin/tensorflow/python/pywrap_tensorflow.cc: In function 'swig_type_info SWIG_Python_TypeQuery(const char_)':
bazel-out/host/bin/tensorflow/python/pywrap_tensorflow.cc:2544:60: error: 'PyCObject_AsVoidPtr' was not declared in this scope
descriptor = (swig_type_info *) PyCObject_AsVoidPtr(obj);
^
bazel-out/host/bin/tensorflow/python/pywrap_tensorflow.cc:2549:51: error: 'PyCObject_FromVoidPtr' was not declared in this scope
obj = PyCObject_FromVoidPtr(descriptor, NULL);
^
bazel-out/host/bin/tensorflow/python/pywrap_tensorflow.cc: In function 'PyObject_ wrap_GetMatchingFiles(PyObject, PyObject_)':
bazel-out/host/bin/tensorflow/python/pywrap_tensorflow.cc:5392:23: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
for (int i = 0; i < converted.size(); ++i) {
^
At global scope:
cc1plus: warning: unrecognized command line option "-Wno-self-assign"
Target //tensorflow/tools/pip_package:build_pip_package failed to build